--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
         <table cellspacing="20">
             <tbody>
                 <tr>
-                    <td><img src="Satvik Sawhney Resume Profile.png" alt="Profile Picture" height="200"></td>
+                    <td><img src="https://github.com/SawhneySatvik/SatvikSawhneyCV/blob/main/Satvik%20Sawhney%20Resume%20Profile.png?raw=true
+                        " alt="Profile Picture" height="200"></td>
                     <td>
                         <h1>Satvik Sawhney</h1>
                         <p>
